--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Card</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <h2 class="card-title">Something awesome</h2>
+      <p class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rem
+        facilis.
+      </p>
+      <a href="" class="button">Learn More</a>
+    </div>
+  </body>
 </html>
