--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Card</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card">
-      <h2 class="card-title">Something awesome</h2>
-      <p class="card-body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rem
-        facilis.
-      </p>
-      <a href="" class="button">Learn More</a>
+      <div class="card-content">
+        <h2 class="card-title">Something awesome</h2>
+        <p class="card-body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rem
+          facilis.
+        </p>
+        <a href="" class="button">Learn More</a>
+      </div>
     </div>
   </body>
 </html>
